k8s/preprod/ingress.yaml
# Ingress – Cluster PREPROD
# Domaines : preprod.thetiptop-jeu.fr (frontend) + api.preprod.thetiptop-jeu.fr (backend)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thetiptop-ingress
  namespace: thetiptop-preprod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-security-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - preprod.thetiptop-jeu.fr
        - api.preprod.thetiptop-jeu.fr
      secretName: thetiptop-preprod-tls
  rules:
    - host: preprod.thetiptop-jeu.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: api.preprod.thetiptop-jeu.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
